workspace/output4.log
  File "/home/captivea/.openclaw/workspace/workspace/test_project_workflow.py", line 381
    requirement_id = None
    ^^^^^^^^^^^^^^
IndentationError: expected an indented block after 'else' statement on line 379
